src/test/ui/binding/issue-53114-borrow-checks.stderr
error[E0382]: use of moved value: `m`
  --> $DIR/issue-53114-borrow-checks.rs:22:11
   |
LL |     let m = M;
   |         - move occurs because `m` has type `M`, which does not implement the `Copy` trait
LL |     drop(m);
   |          - value moved here
LL |     match m { _ => { } } // #53114: should eventually be accepted too
   |           ^ value used here after move

error[E0382]: use of moved value: `mm`
  --> $DIR/issue-53114-borrow-checks.rs:27:11
   |
LL |     match mm { (_x, _) => { } }
   |                 -- value moved here
LL |     match mm { (_, _y) => { } }
   |           ^^ value used here after partial move
   |
   = note: move occurs because `mm.0` has type `M`, which does not implement the `Copy` trait

error[E0382]: use of moved value: `mm`
  --> $DIR/issue-53114-borrow-checks.rs:29:11
   |
LL |     match mm { (_, _y) => { } }
   |                    -- value moved here
LL |
LL |     match mm { (_, _) => { } }
   |           ^^ value used here after partial move
   |
   = note: move occurs because `mm.1` has type `M`, which does not implement the `Copy` trait

error[E0382]: use of moved value: `m`
  --> $DIR/issue-53114-borrow-checks.rs:36:16
   |
LL |     let m = M;
   |         - move occurs because `m` has type `M`, which does not implement the `Copy` trait
LL |     drop(m);
   |          - value moved here
LL |     if let _ = m { } // #53114: should eventually be accepted too
   |                ^ value used here after move

error[E0382]: use of moved value: `mm`
  --> $DIR/issue-53114-borrow-checks.rs:41:22
   |
LL |     if let (_x, _) = mm { }
   |             -- value moved here
LL |     if let (_, _y) = mm { }
   |                      ^^ value used here after partial move
   |
   = note: move occurs because `mm.0` has type `M`, which does not implement the `Copy` trait

error[E0382]: use of moved value: `mm`
  --> $DIR/issue-53114-borrow-checks.rs:43:21
   |
LL |     if let (_, _y) = mm { }
   |                -- value moved here
LL |
LL |     if let (_, _) = mm { }
   |                     ^^ value used here after partial move
   |
   = note: move occurs because `mm.1` has type `M`, which does not implement the `Copy` trait

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0382`.
